[package]
name = "rensa"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"
authors = ["Karim Agha <karim.dev@gmail.com>"]
license = "MIT"
description = "Fast PoS Blockchain in Rust"
homepage = "https://github.com/karim-agha/rensa"
repository = "https://github.com/karim-agha/rensa"
keywords = ["blockchain", "cryptocurrency"]
categories = ["blockchain", "cryptocurrency"]

[dependencies]
anyhow = "1.0"
futures = "0.3"
bs58 = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
flexbuffers = "2.0"
multihash = { version = "0.15", features = ["serde-codec"] }
thiserror = "1.0"
rand_chacha = "0.3.1"
async-trait = "0.1.52"
tracing = "0.1"
tracing-subscriber = "0.3"
libp2p = "0.41"
libp2p-episub = "0.1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.75"
humantime-serde = "1.0"
clap = { version = "3.0.7", features = ["derive"] }
tokio = { version = "1.15", features = ["full"] }
ed25519-dalek = { version = "1", features = [
  "default",
  "serde",
  "u64_backend",
] }
