[package]
name = "rensa"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
authors = ["Karim Agha <karim.dev@gmail.com>", "Boy Maas <boy.maas@gmail.com>"]
license = "MIT"
description = "Fast PoS Blockchain in Rust"
homepage = "https://github.com/terra-money/rensa"
repository = "https://github.com/terra-money/rensa"
keywords = ["blockchain", "cryptocurrency"]
categories = ["blockchain", "cryptocurrency"]

[dependencies]
anyhow = "1.0"
futures = "0.3"
bs58 = "0.4"
rand = "0.8"
borsh = "0.9.3"
prost = "0.10"
zstd = "0.5.4"
bincode = "1.3.3"
jemallocator = "0.3"
axum = "0.5"
dashmap = "5.1"
itertools = "0.10"
loupe = "0.1"
wasmer = { version = "2.2.1", features = ["cranelift"] }
axum-extra = { version = "0.2", features = ["erased-json"] }
sled = { version = "0.34", features = ["compression"] }
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
multihash = { version = "0.16", features = ["serde-codec"] }
sqlx = { version = "0.5", features = [
  "runtime-tokio-rustls",
  "all-databases",
  "offline",
] }
thiserror = "1.0"
once_cell = "1.9"
rand_chacha = "0.3.1"
async-trait = "0.1.52"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libp2p = { version = "0.44.0", default-features = false, features = [
  "yamux",
  "noise",
  "secp256k1",
  "dns-async-std",
  "tcp-async-io",
] }
rayon = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.75"
shellexpand = "2.1.0"
humantime-serde = "1.0"
indexmap = { version = "1.8.0", features = ["serde-1"] }
clap = { version = "3.0.7", features = ["derive"] }
tokio = { version = "1.15", features = ["full"] }
asynchronous-codec = "0.6"
unsigned-varint = { version = "0.7.0", features = ["asynchronous_codec"] }
curve25519-dalek = "3.2"
ed25519-dalek = { version = "1", features = [
  "default",
  "serde",
  "u64_backend",
] }

[build-dependencies]
prost-build = "0.10"

[profile.release]
debug = true


[workspace]
members = [".", "./sdk/rust", "./sdk/rust/macros"]
default-members = [".", "./sdk/rust", "./sdk/rust/macros"]
