[package]
name = "rensa-sdk-macros"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
authors = ["Karim Agha <karim.dev@gmail.com>"]
license = "MIT"
description = "Fast PoS Blockchain in Rust"
homepage = "https://github.com/terra-money/rensa"
repository = "https://github.com/terra-money/rensa"
keywords = ["blockchain", "cryptocurrency"]
categories = ["blockchain", "cryptocurrency"]

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[lib]
proc-macro = true
